hphp/test/quick/record-class-same-name.php.expectf
Fatal error: Cannot declare record with the same (Foo) as an existing class in %s/record-class-same-name.php on line 6
